--- a/.env
+++ b/.env
@@ -6,4 +6,13 @@ API_KEY=WCjWLueQo596P03tFr8Q
 API_URL=https://ulpcloud.site/url
 
 # Admin User ID (your Telegram user ID)
-ADMIN_ID=1268314769
+ADMIN_ID=8288405144
+
+# NOWPayments Configuration
+# Get your API key from: https://nowpayments.io/
+NOWPAYMENTS_API_KEY=MD8DT9Y-32X4Q3F-QJB9E93-GGWREZE
+NOWPAYMENTS_IPN_SECRET=0CoRbQLgX2ERLVGEuCZegCoMLDtyqQHN
+
+# Pricing (optional - defaults in config.py)
+PRICE_PER_SEARCH=1
+FREE_SEARCHES_PER_USER=1
