--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Telegram Bot Configuration
-BOT_TOKEN=8228981271:AAGWg72AgjJI-85qzz90ayRojTCN1-rakTQ
+BOT_TOKEN=7996639950:AAEZbYQzYfvTpg5dKNVl6r-FLWQDaFwMOnc
 
 # API Configuration
 API_KEY=WCjWLueQo596P03tFr8Q
@@ -9,10 +9,9 @@ API_URL=https://ulpcloud.site/url
 ADMIN_ID=8288405144
 
 # NOWPayments Configuration
-# Get your API key from: https://nowpayments.io/
 NOWPAYMENTS_API_KEY=MD8DT9Y-32X4Q3F-QJB9E93-GGWREZE
 NOWPAYMENTS_IPN_SECRET=0CoRbQLgX2ERLVGEuCZegCoMLDtyqQHN
 
-# Pricing (optional - defaults in config.py)
+# Pricing
 PRICE_PER_SEARCH=1
 FREE_SEARCHES_PER_USER=1
